[package]
# name is derived from combining "Femto" (femtometre) combined with "Modrinth"
name = "femtorinth"
version = "0.1.3"
authors = ["vivyir <ayitsmephoenix@airmail.cc>"]
edition = "2021"
description = "Femtorinth is a library to interact with a sub-set of the Modrinth API."
readme = "README.md"
repository = "https://github.com/vivyir/femtorinth"
license = "MPL-2.0"
keywords = ["minecraft", "modding", "modrinth", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "femtorinth"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ureq = { version = "2.3", features = ["json"] }
